# tee-pee_scraper

./: Cargo.toml
.github/workflows/: CI.yml
src/: lib.rs  main.rs  teepee.rs  utils.rs
src/authentication/: credentials.rs  login_form.rs  mod.rs  password_validator.rs
src/object/: mod.rs  object.rs  parent.rs  person.rs  unit.rs
src/object/builder/: object_builer.rs  person_builder.rs  unit_builder.rs
src/objects/: mod.rs  object.rs  parent.rs  person.rs  teepee_object.rs  unit.rs
src/objects/builders/: mod.rs  object_builer.rs  person_builder.rs  unit_builder.rs
src/scraping/: mod.rs  person_scraper.rs  scraper.rs  scraper_mode.rs  teepee_scraper.rs  unit_scraper.rs  utils.rs
tests/: test.rs
