[package]
name = "tee-pee_scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
reqwest = { version = "0.12.9", features = ["blocking", "cookies"] }
rpassword = "7.3.1"
scraper = "0.22.0"
serde = { version = "1.0.216", features = ["derive"] }
regex = "1.11.1"
keyring = { version = "3.6.1", features = ["apple-native", "windows-native", "linux-native"] }

[dev-dependencies]
dotenv = "0.15.0"
